# Chunkcanvas

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  download_gguf.sh  eslint.config.mjs  next.config.ts  package-lock.json  package.json  run_vllm.sh  streamlitapp_path.txt
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
app/components/: EnvLoader.tsx  ThemeProvider.tsx
app/components/chunking/: ChunkCard.tsx  ChunkList.tsx  ChunkingParams.tsx
app/components/downloads/: DownloadJsonButton.tsx  DownloadScriptButton.tsx
app/components/embeddings/: EmbeddingsSection.tsx  VoyageSection.tsx
app/components/faiss/: FaissSection.tsx
app/components/mongodb/: MongodbSection.tsx
app/components/parsing/: ParsedDocumentView.tsx  ProgressBar.tsx
app/components/pinecone/: PineconeSection.tsx
app/components/pipeline-forms/: DoclingForm.tsx  ExcelForm.tsx  OllamaForm.tsx  OpenRouterForm.tsx  VllmForm.tsx
app/components/shared/: ConfigSection.tsx
app/components/sidebar/: AppInfo.tsx  ChromaStatus.tsx  DoclingStatus.tsx  FaissStatus.tsx  OllamaStatus.tsx  Sidebar.tsx  (+2 more)
app/lib/: chroma-server.ts  chunking.ts  cohere.ts  constants.ts  docling.ts  downloads.ts  local-mode.ts  ollama.ts  openrouter.ts  parsers.ts  pinecone-client.ts  script-generator.ts  store.ts  tokenizer.ts  types.ts  vllm.ts  voyage.ts
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: docling_server.py  faiss_server.py
backend/data/: index.faiss  index.meta.json
(+5 files in other folders)
