[project]
name = "chunkcanvas-faiss-backend"
version = "0.1.0"
description = "FastAPI backend for local FAISS index management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.35.0",
  "faiss-cpu>=1.12.0",
  "numpy>=2.3.2",
  "pydantic>=2.11.0",
  "chromadb>=1.5.0",
  "docling[vlm]>=2.73.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.0",
  "fpdf2>=2.8.5",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
